# django-python-generate-sbom

./: .dockerignore  .env.container.example  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  cliff.toml  codecov.yml  docker-compose.yml  mkdocs.yml  pixi.toml  sonar-project.properties
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  issue-labeler.yml  labeler.yml  labels.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  labeler.yml  maintenance.yml  release.yml  stale.yml
.pixi/: config.toml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-backend-scaffold-and-developer-toolchain.md  1-2-docker-compose-full-stack.md  1-3-core-shared-abstractions-and-django-configuration.md  1-4-react-spa-foundation.md  10-1-app-shell-and-auth-aware-navigation.md  10-2-redirect-to-login-and-back.md  10-3-auto-redirect-to-login-after-registration.md  10-4-autofocus-email-on-login.md  10-5-account-menu-shows-logged-in-user.md  10-6-login-submits-on-enter.md  10-7-remove-dashboard-login-to-index.md  10-8-home-nav-item.md  11-1-documentation-site-scaffold-and-github-pages.md  11-10-publish-documentation-on-release.md  11-11-user-facing-documentation-reconciliation.md  11-2-user-guide.md  (+141 more)
backend/: manage.py  pyproject.toml
backend/config/: __init__.py  asgi.py  celery_app.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/generate_sbom/: __init__.py
backend/generate_sbom/analysis/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/generate_sbom/analysis/migrations/: 0001_initial.py  0002_alter_analysisreport_report_type.py
backend/generate_sbom/analysis/services/: __init__.py  graph.py  http.py  license.py  parselmouth.py  reports.py  versions.py  vulnerability.py
backend/generate_sbom/common/: config_views.py  logging.py  models.py  storage.py  urls.py  views.py
backend/generate_sbom/manifests/: apps.py  detection.py  models.py  serializers.py  services.py  urls.py  views.py
backend/generate_sbom/manifests/migrations/: 0001_initial.py  0002_alter_manifestupload_user.py
backend/generate_sbom/sbom/: apps.py  document.py  generation.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/generate_sbom/sbom/migrations/: 0001_initial.py
backend/generate_sbom/sbom/parsers/: __init__.py  _conda.py  _pixi.py  _types.py  _uv.py  conda.py  pixi_lock.py  pixi_toml.py  pyproject.py  requirements.py
backend/generate_sbom/tasks/: __init__.py  analysis.py  maintenance.py  sbom_pipeline.py
backend/generate_sbom/users/: apps.py  auth.py  authentication.py  models.py  schema.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/generate_sbom/users/management/commands/: bootstrap_admin_org.py  seed_superuser.py
backend/generate_sbom/users/migrations/: 0001_initial.py  0002_orgapikey.py  0003_org_is_admin_org.py  0004_seed_admin_org.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_analysis_integration.py  test_artifact_cleanup.py  test_pipeline_orchestration.py  test_sbom_storage.py
backend/tests/unit/: conftest.py  test_analysis_http.py  test_analysis_reports.py  test_api_schema.py  test_apikeys.py  test_app_config.py  test_artifact_cleanup.py  test_artifact_deletion.py  test_auth.py  test_common_models.py  test_dev_runner_config.py  test_global_admin.py  test_graph_service.py  test_graph_task_api.py  test_health.py  test_jobs.py  test_jobs_list.py  test_license_service.py  test_license_task_api.py  test_logging.py  test_maintenance_task.py  test_manifest_format_consistency.py  test_manifests.py  test_membership.py  test_orgs.py  test_parselmouth.py  test_parsers.py  test_pipeline_orchestration.py  test_pipeline_phases.py  test_registration.py  test_sbom_document.py  test_sbom_generation.py  test_seed_superuser.py  test_settings_celery.py  test_settings_local.py  test_settings_storage.py  test_smoke.py  test_spa.py  test_users_models.py  test_versions_service.py  (+3 more)
docs/: contributing.md  index.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
presentations/: Generate-SBOM-Executive-Overview.md  Generate-SBOM-Executive-Overview.pptx
(+155 files in other folders)
