[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generate-sbom"
version = "0.1.0"
description = "Django web service that generates SBOMs from Python dependency manifests"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Kevin Mills", email = "millsks@gmail.com" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["generate_sbom"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests requiring real I/O, network, or DB",
]

[tool.ruff]
line-length = 120
src = ["generate_sbom", "config", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF", "D"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*" = ["D", "F403", "F405"]
"config/*" = ["D"]
"manage.py" = ["D"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["generate_sbom", "config"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.local"

[tool.coverage.run]
source = ["generate_sbom"]

[tool.git-cliff.changelog]
header = "# Changelog\n\n"
body = """
{% for group, commits in commits | group_by(attribute="group") %}
### {{ group | upper_first }}
{% for commit in commits %}
- {{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}]({{ commit.id }}))
{% endfor %}
{% endfor %}
"""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
commit_parsers = [
    { message = "^feat", group = "Features" },
    { message = "^fix", group = "Bug Fixes" },
    { message = "^doc", group = "Documentation" },
    { message = "^perf", group = "Performance" },
    { message = "^refactor", group = "Refactoring" },
    { message = "^chore", skip = true },
]
