[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generate-sbom"
version = "0.1.0"
description = "Django web service that generates SBOMs from Python dependency manifests"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Kevin Mills", email = "millsks@gmail.com" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["generate_sbom"]

[tool.pytest.ini_options]
# Story 20.4: the test settings force Celery eager mode so the unit suite runs offline
# (no Redis, no filesystem broker, no separate worker). config.settings.test inherits the
# containerless local settings and only flips the eager flags.
DJANGO_SETTINGS_MODULE = "config.settings.test"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests requiring real I/O, network, or DB",
]

[tool.ruff]
line-length = 120
src = ["generate_sbom", "config", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF", "D"]
# D104: empty package __init__.py files need no docstring.
# D106: Django model Meta inner classes need no docstring.
ignore = ["E501", "D104", "D106"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*" = ["D", "F403", "F405"]
"config/*" = ["D"]
"manage.py" = ["D"]
"tests/*" = ["D"]
"*/migrations/*" = ["D", "RUF012", "I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["generate_sbom", "config"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.local"

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "lib4sbom.*",
    "storages.*",
    "requests_cache.*",
    "requests_ratelimiter.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["generate_sbom"]
omit = ["*/migrations/*"]

[tool.bandit]
# B314: the ElementTree.fromstring calls in sbom/document.py parse the tool's OWN
# generated CycloneDX XML (trusted, not user input — see the in-line comments there),
# so the XXE warning is a false positive. Revisit if untrusted XML parsing is added.
skips = ["B314"]
